# simulator

./: Dockerfile  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml  scorecards.yml
secsgem_simulator/: __init__.py  __main__.py  cli.py  cli_tasks.py  command_server.py  script_runner.py  secs_data.py  secs_data_a.py  secs_data_b.py  secs_data_boolean.py  secs_data_j.py  secs_data_l.py  secs_data_number.py  secs_data_str.py  secs_script.py  secsgem_package_0_1.py  secsgem_package_base.py  server_tasks.py  sml_parser.py
tests/: test_cli.py  test_secsgem_simulator.py
